--- a/proceso-desarrollo.ipynb
+++ b/proceso-desarrollo.ipynb
@@ -147,6 +147,47 @@
     "# Usage example\n",
     "delete_document(\"users\", \"document_id123\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1234\n"
+     ]
+    }
+   ],
+   "source": [
+    "diction = {\"dia\": 1234}\n",
+    "\n",
+    "print(diction[\"dia\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1_4_24\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "entrada = \"01-04-24\"\n",
+    "entrada = re.sub(\"[-/]\", \"_\", entrada)\n",
+    "\n",
+    "print(entrada)"
+   ]
   }
  ],
  "metadata": {
