--- a/extras/proceso-desarrollo.ipynb
+++ b/extras/proceso-desarrollo.ipynb
@@ -149,6 +149,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Pruebas"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -187,6 +194,49 @@
     "entrada = re.sub(\"[-/]\", \"_\", entrada)\n",
     "\n",
     "print(entrada)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No es una fecha válida\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "pat = r\"[0-3][0-9][-/ ][0-1][0-9][-/ ][0-9]{4}\"\n",
+    "# pat = r\"[0-9]{2}[-/ ][0-9]{2}[-/ ][0-9]{4}\"\n",
+    "# r\"\\d{2}[-/ ]\\d{2}[-/ ]\\d{4}\"\n",
+    "what_day = input(f\"\\nIntroduce el día que quieres añadir: \")\n",
+    "search = re.search(pat, what_day)\n",
+    "\n",
+    "if search:\n",
+    "    print(\"muy bien\")\n",
+    "else:\n",
+    "    print(\"No es una fecha válida\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def comprueba(input):\n",
+    "    pat = r\"[0-9]{2}[-/ ][0-9]{2}[-/ ][0-9]{4}\"\n",
+    "    search = re.search(pat, input)\n",
+    "    if search:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False"
    ]
   }
  ],
